KubernetesConfigs/clickhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: clickhouse
  name: clickhouse
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: clickhouse
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/deliverydeploy-rmoff: "true"
        io.kompose.service: clickhouse
    spec:
      containers:
        - image: yandex/clickhouse-server
          name: clickhouse
          imagePullPolicy: "Always"
          ports:
            - containerPort: 9000
            - containerPort: 8123
          resources: {}
          volumeMounts:
            - mountPath: /etc/clickhouse-server/users.xml
              name: clickhouse-claim0
            - mountPath: /etc/clickhouse-server/config.xml
              name: clickhouse-claim1
      restartPolicy: Always
      volumes:
        - name: clickhouse-claim0
          persistentVolumeClaim:
            claimName: clickhouse-claim0
        - name: clickhouse-claim1
          persistentVolumeClaim:
            claimName: clickhouse-claim1
status: {}
