KubernetesConfigs/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/deliverydeploy-rmoff: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: lantum1/nginx_mai
          name: nginx-serv
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
