KubernetesConfigs/deliverydeploy-rmoff-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: deliverydeploy-rmoff
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/deliverydeploy-rmoff: "true"
  podSelector:
    matchLabels:
      io.kompose.network/deliverydeploy-rmoff: "true"
